--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,15 @@ before_install:
   - docker build -t joaogardenberg/testing-docker-ci -f Dockerfile.dev .
 script:
   - docker run -e CI=true joaogardenberg/testing-docker-ci npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-2
+  app: testing-docker-ci
+  env: Docker-env
+  bucket_name: elasticbeanstalk-us-west-2-34975643789
+  bucket_path: testing-docker-ci
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
